--- a/src/main/resources/templates/owner/show.html
+++ b/src/main/resources/templates/owner/show.html
@@ -43,12 +43,12 @@
         <div class="card-footer text-muted">
             <div class="row">
                 <div class="col-md-6 d-grid">
-                    <a class="btn  btn-danger" th:href="@{/owners/edit/{id}(id=${owner.id})}">
-                        <i class="bi bi-trash3"></i> Sil</a>
+                    <a class="btn  btn-danger" th:href="@{/owners/delete/{id}(id=${owner.id})}">
+                        <i class="bi bi-trash3"></i>&nbsp;&nbsp;Sil</a>
                 </div>
                 <div class="col-md-6 d-grid">
-                    <a class="btn btn-primary" th:href="@{/owners/{id}(id=${owner.id})}">
-                        <i class="bi bi-pencil"></i> Düzenle</a>
+                    <a class="btn btn-primary" th:href="@{/owners/edit/{id}(id=${owner.id})}">
+                        <i class="bi bi-pencil"></i>&nbsp;&nbsp;Düzenle</a>
                 </div>
             </div>
         </div>
