--- a/src/main/resources/templates/pet/show.html
+++ b/src/main/resources/templates/pet/show.html
@@ -50,17 +50,17 @@
                     <div class="row">
                         <div class="col-md-6 d-grid">
                             <a class="btn  btn-danger" th:href="@{/pets/delete/{id}(id=${pet.id})}">
-                                <i class="bi bi-trash3"></i> Sil</a>
+                                <i class="bi bi-trash3"></i>&nbsp;&nbsp;Sil</a>
                         </div>
                         <div class="col-md-6 d-grid">
                             <a class="btn btn-primary" th:href="@{/pets/edit/{id}(id=${pet.id})}">
-                                <i class="bi bi-pencil"></i> Düzenle</a>
+                                <i class="bi bi-pencil"></i>&nbsp;&nbsp;Düzenle</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6" th:if="${pet.owner}">
             <div class="card text-dark bg-light" style="min-height: 400px;">
                 <div class="card-body">
                     <h5 class="card-title">[[${pet.owner.fullName}]]</h5>
@@ -75,13 +75,17 @@
                 </div>
                 <div class="card-footer text-muted">
                     <div class="row">
-                        <div class="col-md-6 d-grid">
+                        <div class="col-md-4 d-grid">
                             <a class="btn  btn-danger" th:href="@{/owners/delete/{id}(id=${pet.owner.id})}">
-                                <i class="bi bi-trash3"></i> Sil</a>
+                                <i class="bi bi-trash3"></i>&nbsp;&nbsp;Sil</a>
                         </div>
-                        <div class="col-md-6 d-grid">
-                            <a class="btn btn-primary" th:href="@{/owners/edit/{id}(id=${pet.owner.id})}">
-                                <i class="bi bi-pencil"></i> Düzenle</a>
+                        <div class="col-md-4 d-grid">
+                            <a class="btn btn-warning" th:href="@{/owners/edit/{id}(id=${pet.owner.id})}">
+                                <i class="bi bi-pencil"></i>&nbsp;&nbsp;Düzenle</a>
+                        </div>
+                        <div class="col-md-4 d-grid">
+                            <a class="btn btn-primary" th:href="@{/owners/{id}(id=${pet.owner.id})}">
+                                <i class="bi bi-person-square"></i>&nbsp;&nbsp;Göster</a>
                         </div>
                     </div>
                 </div>
