--- a/src/main/resources/templates/owner/show.html
+++ b/src/main/resources/templates/owner/show.html
@@ -61,8 +61,9 @@
             <span class="badge bg-secondary">Toplam Kayıt: [[${owner.pets.size()}]]</span>
         </div>
         <div>
-            <a class="btn btn-primary" th:href="@{/pets/add(ownerId=${owner.id})}"><i class="bi bi-plus-lg"></i> Yeni
-                Hayvan Ekle</a>
+            <a class="btn btn-primary" th:href="@{/pets/add(ownerId=${owner.id})}">
+                <i class="bi bi-plus-lg"></i>&nbsp;&nbsp;Yeni Hayvan Ekle
+            </a>
         </div>
     </div>
     <div th:if="(not ${owner.pets.isEmpty()})">
