--- a/src/main/resources/templates/owner/editForm.html
+++ b/src/main/resources/templates/owner/editForm.html
@@ -1,69 +1,58 @@
-<!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org" lang="tr">
+<!DOCTYPE html>
+<html lang="tr" xmlns:th="http://www.thymeleaf.org" th:replace="layout :: layout(~{::title}, ~{::section})">
 <head>
-    <title>Vet App</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <title>VetApp | [[${owner.fullName}]] | Bilgileri Düzenle</title>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">VetApp</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
-                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
-                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+<section>
+    <div class="col-md-6 mx-auto">
+        <div class="d-flex justify-content-between">
+            <div>
+                <h3>Bilgileri Düzenle</h3>
+            </div>
+            <div>
+                <a class="btn btn-primary" th:href="@{/owners/{id}(id=${owner.id})}">Hayvan Sahibi Sayfasına Dön</a>
+            </div>
+        </div>
+        <hr>
+
+
+        <div th:if="${message}" class="alert alert-success" role="alert">
+            [[${message}]]
+        </div>
+
+        <div class="card bg-light">
+            <div class="card-body">
+                <form th:action="@{/owners/edit/{id}(id=${owner.id})}" th:object="${owner}" method="post">
+                    <div th:if="${#fields.hasAnyErrors()}">
+                        <ul>
+                            <li th:each="err : ${#fields.errors('owner.*')}" th:text="${err}"/>
+                        </ul>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="fullName" class="form-label">Ad Soyad</label>
+                        <input type="text" class="form-control" th:field="*{fullName}" id="fullName">
+                    </div>
+                    <div class="mb-3">
+                        <label for="telephoneNumber" class="form-label">Telefon</label>
+                        <input type="tel" class="form-control" th:field="*{telephoneNumber}" id="telephoneNumber">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" th:field="*{email}" id="email">
+                    </div>
+                    <div class="mb-3">
+                        <label for="address" class="form-label">Adres</label>
+                        <input type="text" class="form-control" th:field="*{address}" id="address">
+                    </div>
+                    <button type="submit" class="btn btn-success">Kaydet</button>
+                </form>
             </div>
         </div>
     </div>
-</nav>
+</section>
 
-<div class="container mt-5 col-md-4">
-
-    <div class="d-flex justify-content-start mb-5">
-        <div>
-            <a class="btn btn-primary" th:href="@{/owners/{id}(id=${owner.id})}">Hayvan Sahibi Sayfasına Dön</a>
-        </div>
-    </div>
-    <hr>
-    <div th:if="${message}" class="alert alert-success" role="alert">
-        [[${message}]]
-    </div>
-
-    <form th:action="@{/owners/edit/{id}(id=${owner.id})}" th:object="${owner}" method="post">
-
-        <div th:if="${#fields.hasAnyErrors()}">
-            <ul>
-                <li th:each="err : ${#fields.errors('owner.*')}" th:text="${err}"/>
-            </ul>
-        </div>
-
-        <div class="mb-3">
-            <label for="fullName" class="form-label">Ad Soyad</label>
-            <input type="text" class="form-control" th:field="*{fullName}" id="fullName">
-        </div>
-        <div class="mb-3">
-            <label for="telephoneNumber" class="form-label">Telefon</label>
-            <input type="tel" class="form-control" th:field="*{telephoneNumber}" id="telephoneNumber">
-        </div>
-        <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" th:field="*{email}" id="email">
-        </div>
-        <div class="mb-3">
-            <label for="address" class="form-label">Adres</label>
-            <input type="text" class="form-control" th:field="*{address}" id="address">
-        </div>
-        <button type="submit" class="btn btn-success">Kaydet</button>
-    </form>
-
-</div>
 </body>
 </html>
