--- a/src/main/resources/templates/owner/search.html
+++ b/src/main/resources/templates/owner/search.html
@@ -1,30 +1,11 @@
-<!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org" lang="tr">
+<!DOCTYPE html>
+<html lang="tr" xmlns:th="http://www.thymeleaf.org" th:replace="layout :: layout(~{::title}, ~{::section})">
 <head>
-    <title>Vet App</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <title>VetApp | Hayvan Sahibi Arama: [[${param.keyword}]]</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">VetApp</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
-                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
-                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
-            </div>
-        </div>
-    </div>
-</nav>
-<div class="container mt-5">
 
+<section>
     <h2>Arama Ekranı</h2>
     <hr>
     <div class="d-flex justify-content-between">
@@ -48,9 +29,10 @@
         <span class="badge bg-secondary">Toplam Kayıt: [[${totalItems}]]</span>
     </div>
 
-    <div th:if="${totalItems == 0}">
+    <div th:if="${totalItems == 0}" class="mt-2">
         <h4>Arama sonucunda kayıt bulunamadı.</h4>
     </div>
+
     <div th:unless="${totalItems == 0}">
         <table class="table table-light table-bordered table-hover mt-3">
             <thead>
@@ -100,8 +82,7 @@
             </ul>
         </nav>
     </div>
+</section>
 
-
-</div>
 </body>
 </html>
