--- a/src/main/resources/templates/pet/addForm.html
+++ b/src/main/resources/templates/pet/addForm.html
@@ -1,71 +1,56 @@
-<!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org" lang="tr">
+<!DOCTYPE html>
+<html lang="tr" xmlns:th="http://www.thymeleaf.org" th:replace="layout :: layout(~{::title}, ~{::section})">
 <head>
-    <title>Vet App</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <title>VetApp | Yeni Hayvan Ekle</title>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">VetApp</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
-                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
-                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+<section>
+    <div class="col-md-6 mx-auto">
+        <h4>Yeni Hayvan</h4>
+        <hr>
+        <div class="card bg-light">
+            <div class="card-body">
+                <form th:action="@{/pets/add}" th:object="${pet}" method="post">
+                    <div th:if="${#fields.hasErrors()}" class="alert alert-danger" role="alert">
+                        <ul>
+                            <li th:each="err : ${#fields.allErrors()}" th:text="${err}"/>
+                        </ul>
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">İsim</label>
+                        <input type="text" class="form-control" th:field="*{name}" id="name">
+                    </div>
+                    <div class="mb-3">
+                        <label for="age" class="form-label">Yaş</label>
+                        <input type="number" class="form-control" th:field="*{age}" id="age">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="genus" class="form-label">Cinsi</label>
+                        <select class="form-select" th:field="*{genus}" id="genus">
+                            <option value="">Lütfen seçim yapın...</option>
+                            <option th:each="g : ${genus}" th:value="${g.key}" th:text="${g.value}"></option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="owner" class="form-label">Hayvan Sahibi</label>
+                        <select class="form-select" name="owner" id="owner">
+                            <option value="">Lütfen seçim yapın...</option>
+                            <option th:each="owner : ${owners}" th:value="${owner.id}" th:text="${owner.fullName}"
+                                    th:selected="${ownerId == owner.id}"></option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="description" class="form-label">Açıklama</label>
+                        <textarea class="form-control" th:field="*{description}" id="description" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-success">Kaydet</button>
+                </form>
             </div>
         </div>
     </div>
-</nav>
-
-<div class="container mt-5 col-md-4">
-    <h4>Yeni Hayvan</h4>
-    <hr>
-
-    <form th:action="@{/pets/add}" th:object="${pet}" method="post">
-        <div th:if="${#fields.hasErrors()}" class="alert alert-danger" role="alert">
-            <ul>
-                <li th:each="err : ${#fields.allErrors()}" th:text="${err}"/>
-            </ul>
-        </div>
-        <div class="mb-3">
-            <label for="name" class="form-label">İsim</label>
-            <input type="text" class="form-control" th:field="*{name}" id="name">
-        </div>
-        <div class="mb-3">
-            <label for="age" class="form-label">Yaş</label>
-            <input type="number" class="form-control" th:field="*{age}" id="age">
-        </div>
-
-        <div class="mb-3">
-            <label for="genus" class="form-label">Cinsi</label>
-            <select class="form-select" th:field="*{genus}" id="genus">
-                <option value="">Lütfen seçim yapın...</option>
-                <option th:each="g : ${genus}" th:value="${g.key}" th:text="${g.value}"></option>
-            </select>
-        </div>
-        <div class="mb-3">
-            <label for="owner" class="form-label">Hayvan Sahibi</label>
-            <select class="form-select" name="owner" id="owner">
-                <option value="">Lütfen seçim yapın...</option>
-                <option th:each="owner : ${owners}" th:value="${owner.id}" th:text="${owner.fullName}"
-                        th:selected="${ownerId == owner.id}"></option>
-            </select>
-        </div>
-        <div class="mb-3">
-            <label for="description" class="form-label">Açıklama</label>
-            <textarea class="form-control" th:field="*{description}" id="description" rows="3"></textarea>
-        </div>
-        <button type="submit" class="btn btn-success">Kaydet</button>
-    </form>
-</div>
+</section>
 
 </body>
 </html>
