--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,41 +1,25 @@
-<!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org" lang="tr">
+<!DOCTYPE html>
+<html lang="tr" xmlns:th="http://www.thymeleaf.org" th:replace="layout :: layout(~{::title}, ~{::section})">
 <head>
-    <title>Vet App</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <title>VetApp | Hata oluştu</title>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">VetApp</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
-                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
-                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
-            </div>
-        </div>
-    </div>
-</nav>
+<section>
 
-<div class="page-wrap d-flex flex-row align-items-center mt-5">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-12 text-center">
-                <div class="mb-4 lead" th:if="${message}">[[${message}]]</div>
-                <div class="mb-4 lead" th:unless="${message}">Sayfa Bulunamadı</div>
-                <a th:href="@{/}" class="btn btn-link">Ana Sayfa'ya Dön</a>
+    <div class="page-wrap d-flex flex-row align-items-center mt-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 text-center">
+                    <div class="mb-4 lead" th:if="${message}">[[${message}]]</div>
+                    <div class="mb-4 lead" th:unless="${message}">Sayfa Bulunamadı</div>
+                    <a th:href="@{/}" class="btn btn-link">Ana Sayfa'ya Dön</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+</section>
 
 </body>
 </html>
