--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -8,7 +8,7 @@
 <section>
 
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <div class="card bg-light">
                 <div class="card-body">
                     <h5 class="card-title">Hayvan Sahipleri</h5>
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <div class="card bg-light">
                 <div class="card-body">
                     <h5 class="card-title">Hayvanlar</h5>
