--- a/src/main/resources/templates/owner/search.html
+++ b/src/main/resources/templates/owner/search.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="justify-content-start">
-        <span class="badge bg-secondary">Toplam Kayıt: [[${totalItems}]]</span>
+        <span class="badge bg-warning">Toplam Kayıt: [[${totalItems}]]</span>
     </div>
 
     <div th:if="${totalItems == 0}" class="mt-2">
@@ -52,9 +52,19 @@
                 <td>[[${owner.email}]]</td>
                 <td>[[${owner.address}]]</td>
                 <td>[[${#dates.format(owner.createdAt, 'dd/MMM/yyyy HH:mm')}]]</td>
-                <td><a class="btn btn-outline-success" th:href="@{/owners/{id}(id=${owner.id})}">Göster</a>
-                    <a class="btn btn-outline-warning" th:href="@{/owners/edit/{id}(id=${owner.id})}">Düzenle</a>
-                    <a class="btn btn-outline-danger" th:href="@{/owners/delete/{id}(id=${owner.id})}">Sil</a>
+                <td>
+                    <div class="row g-2">
+                        <div class="col-lg-4 d-grid">
+                            <a class="btn btn-outline-success" th:href="@{/owners/{id}(id=${owner.id})}">Göster</a>
+                        </div>
+                        <div class="col-lg-4 d-grid">
+                            <a class="btn btn-outline-warning"
+                               th:href="@{/owners/edit/{id}(id=${owner.id})}">Düzenle</a>
+                        </div>
+                        <div class="col-lg-4 d-grid">
+                            <a class="btn btn-outline-danger" th:href="@{/owners/delete/{id}(id=${owner.id})}">Sil</a>
+                        </div>
+                    </div>
                 </td>
             </tr>
             </tbody>
