--- a/src/main/resources/templates/pet/editForm.html
+++ b/src/main/resources/templates/pet/editForm.html
@@ -31,9 +31,12 @@
                         <label for="name" class="form-label">İsim</label>
                         <input type="text" class="form-control" th:field="*{name}" id="name">
                     </div>
+
                     <div class="mb-3">
-                        <label for="age" class="form-label">Yaş</label>
-                        <input type="number" class="form-control" th:field="*{age}" id="age">
+                        <label for="birthDate" class="form-label">Doğum Tarihi</label>
+                        <input type="date" class="form-control" th:field="*{birthDate}" id="birthDate"
+                               th:attr="max=${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}"
+                        >
                     </div>
 
                     <div class="mb-3">
