--- a/src/main/resources/templates/pet/addForm.html
+++ b/src/main/resources/templates/pet/addForm.html
@@ -11,21 +11,23 @@
         <hr>
         <div class="card bg-light">
             <div class="card-body">
-                <form th:action="@{/pets/add(ownerId=${ownerId})}" th:object="${pet}" method="post">
+                <form th:action="@{/pets/add}" th:object="${pet}" method="post">
                     <div th:if="${#fields.hasErrors()}" class="alert alert-danger" role="alert">
                         <ul>
-                            <li th:each="err : ${#fields.allErrors()}" th:text="${err}"/>
+                            <li th:each="err : ${#fields.allErrors()}" th:text="${err}"></li>
                         </ul>
                     </div>
+                    <input type="hidden" name="ownerId" th:value="${#request.getParameter('ownerId')}">
                     <div class="mb-3">
                         <label for="name" class="form-label">İsim</label>
                         <input type="text" class="form-control" th:field="*{name}" id="name">
                     </div>
                     <div class="mb-3">
-                        <label for="age" class="form-label">Yaş</label>
-                        <input type="number" class="form-control" th:field="*{age}" id="age">
+                        <label for="birthDate" class="form-label">Doğum Tarihi</label>
+                        <input type="date" class="form-control" th:field="*{birthDate}" id="birthDate"
+                               th:attr="max=${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}"
+                        >
                     </div>
-
                     <div class="mb-3">
                         <label for="genus" class="form-label">Cinsi</label>
                         <select class="form-select" th:field="*{genus}" id="genus">
