--- a/src/main/resources/templates/pet/search.html
+++ b/src/main/resources/templates/pet/search.html
@@ -49,7 +49,7 @@
             <tbody>
             <tr th:each="pet : ${pets}">
                 <td class="text-capitalize">[[${pet.name}]]</span></td>
-                <td>[[${pet.age}]]</td>
+                <td>[[${pet.birthDate}]]</td>
                 <td>[[${pet.genus.value}]]</td>
                 <td th:if="${pet.owner != null}">[[${pet.owner.fullName}]]</td>
                 <td th:unless="${pet.owner != null}"></td>
