--- a/src/main/resources/templates/pet/show.html
+++ b/src/main/resources/templates/pet/show.html
@@ -9,15 +9,14 @@
 
     <div class="row">
         <div class="col-md-6">
-            <div class="card text-dark bg-light" style="min-height: 400px;">
+            <div class="card text-dark bg-light" style="min-height: 450px;">
                 <div class="card-body">
                     <h5 class="card-title">[[${pet.name}]]</h5>
                     <hr>
-                    <p class="card-text"><b>Yaş:</b> [[${pet.age}]]</p>
                     <p class="card-text"><b>Cins:</b> [[${pet.genus.value}]]</p>
-                    <p class="card-text"><b>Kayıt Tarihi:</b> [[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]
-                    </p>
-                    <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy
+                    <p class="card-text"><b>Yaş Bilgisi: </b> [[${ageInfo}]]</p>
+                    <p class="card-text"><b>Doğum Tarihi:</b> [[${#dates.format(pet.birthDate, 'dd/MMM/yyyy')}]]</p>
+                    <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(pet.createdAt, 'dd/MMM/yyyy
                         HH:mm')}]]</p>
                     <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy
                         HH:mm')}]]</p>
@@ -39,7 +38,7 @@
             </div>
         </div>
         <div class="col-md-6" th:if="${pet.owner}">
-            <div class="card text-dark bg-light" style="min-height: 400px;">
+            <div class="card text-dark bg-light" style="min-height: 450px;">
                 <div class="card-body">
                     <h5 class="card-title">[[${pet.owner.fullName}]]</h5>
                     <hr>
